Struttura della pagina di elenco dei corsi

--- a/src/MyCourse/Views/Home/index.cshtml
+++ b/src/MyCourse/Views/Home/index.cshtml
@@ -1,4 +1,4 @@
-<h1>Sono la view per l'action Index dell'HomeController</h1>
+<h1>Benvenuto su MyCourse</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ratione iste modi esse neque similique incidunt sapiente consectetur. Ullam fugit dolores consequuntur cum non aliquam officiis deleniti delectus accusantium architecto.</p>
 <p>Voluptatibus epudiandae ut temporibus cupiditate, praesentium sapiente labore, possimus tempora earum veniam in totam rem odio quisquam harum enim natus corporis quia adipisci voluptatum qui voluptatem non excepturi! Eum, voluptate.</p>
 <p>Est molestiae vitae, dolorum a consectetur odit architecto obcaecati explicabo et nostrum temporibus quo neque commodi. Praesentium, hic laboriosam error, maxime modi maiores unde cumque voluptatum saepe culpa tempore cum?</p>
