--- a/src/MyCourse/Views/Shared/_Layout.cshtml
+++ b/src/MyCourse/Views/Shared/_Layout.cshtml
@@ -12,10 +12,11 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css">
     </environment>
+    <link rel="stylesheet" href="~/style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand"><img src="~/logo.svg" height="30"></a>    
             <button class="navbar-toggler" data-target="#navbar" data-toggle="collapse" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,19 +27,12 @@
                         <a class="nav-link" asp-action="Index" asp-controller="Home">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" asp-action="Index" asp-controller="Courses">Catalogo Corsi</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" >Pagina3</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Pagina4</a>
+                        <a class="nav-link" asp-action="Index" asp-controller="Courses">Catalogo corsi</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header> 
-
     <div class="container">
         <i class="far fa-star"></i>
         <i class="fas fa-star-half-alt"></i>
