--- a/src/MyCourse/Views/Home/index.cshtml
+++ b/src/MyCourse/Views/Home/index.cshtml
@@ -1,6 +1,97 @@
-<h1>Benvenuto su MyCourse</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ratione iste modi esse neque similique incidunt sapiente consectetur. Ullam fugit dolores consequuntur cum non aliquam officiis deleniti delectus accusantium architecto.</p>
-<p>Voluptatibus epudiandae ut temporibus cupiditate, praesentium sapiente labore, possimus tempora earum veniam in totam rem odio quisquam harum enim natus corporis quia adipisci voluptatum qui voluptatem non excepturi! Eum, voluptate.</p>
-<p>Est molestiae vitae, dolorum a consectetur odit architecto obcaecati explicabo et nostrum temporibus quo neque commodi. Praesentium, hic laboriosam error, maxime modi maiores unde cumque voluptatum saepe culpa tempore cum?</p>
-<p>Nisi rem voluptas cumque et ratione consectetur impedit eligendi, nostrum praesentium recusandae cupiditate similique consequatur delectus, nihil iste! Blanditiis nam nesciunt possimus cum officia beatae illo quos deserunt totam cupiditate.</p>
-<p>Optio adipisci fugiat deserunt illo eveniet qui maiores voluptas inventore delectus temporibus sunt quaerat repudiandae perspiciatis cumque provident esse autem eaque aspernatur ut eligendi quo, asperiores natus! Ex, magnam ducimus.</p>
+@model HomeViewModel
+<div class="jumbotron">
+    <h1 class="display-4">@ViewData["Title"]</h1>
+    <p class="lead">Impara in maniera facile e divertente con i nostri corsi online!<br>
+Scegli da un vasto catalogo sempre a tua disposizione.</p>
+    <hr class="my-4">
+    <p><a asp-controller="Courses" asp-action="Index" class="btn btn-primary">Sfoglia il catalogo dei corsi <i class="fas fa-angle-right"></i></a></p>
+</div>
+
+<section>
+    <h2>Aggiunti di recente</h2>
+    @foreach (var course in Model.MostRecentCourses)
+    {
+        <hr>
+        <div class="row course">
+            <div class="col-md-1">
+                <img src="@course.ImagePath" width="52" height="52">
+            </div>
+            <div class="col-md-5">
+                <h2>@course.Title</h2>
+                    <author>di @course.Author</author>
+            </div>
+            <div class="col-md-2 rating" title="@course.Rating">
+            @for (int i = 1; i <= 5; i++)
+            {
+                if (course.Rating >= i) 
+                {
+                    <i class="fas fas fa-star"></i>
+                }
+                else if (course.Rating > i - 1) 
+                {
+                    <i class="fas fa-star-half-alt"></i>
+                }
+                else
+                {
+                    <i class="far fa-star"></i>
+                }
+            }
+            </div>
+            <div class="col-md-2 price">
+                @course.CurrentPrice
+                @if (!course.CurrentPrice.Equals(course.FullPrice))
+                {
+                    <br><s>@course.FullPrice</s>
+                }
+            </div>
+            <div class="col-md-2 d-flex align-items-center">
+                <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
+            </div>
+        </div>
+    }
+</section>
+
+
+<section>
+    <h2>I migliori di sempre</h2>
+    @foreach (var course in Model.BestRatingCourses)
+    {
+        <hr>
+        <div class="row course">
+            <div class="col-md-1">
+                <img src="@course.ImagePath" width="52" height="52">
+            </div>
+            <div class="col-md-5">
+                <h2>@course.Title</h2>
+                    <author>di @course.Author</author>
+            </div>
+            <div class="col-md-2 rating" title="@course.Rating">
+            @for (int i = 1; i <= 5; i++)
+            {
+                if (course.Rating >= i) 
+                {
+                    <i class="fas fas fa-star"></i>
+                }
+                else if (course.Rating > i - 1) 
+                {
+                    <i class="fas fa-star-half-alt"></i>
+                }
+                else
+                {
+                    <i class="far fa-star"></i>
+                }
+            }
+            </div>
+            <div class="col-md-2 price">
+                @course.CurrentPrice
+                @if (!course.CurrentPrice.Equals(course.FullPrice))
+                {
+                    <br><s>@course.FullPrice</s>
+                }
+            </div>
+            <div class="col-md-2 d-flex align-items-center">
+                <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
+            </div>
+        </div>
+    }
+</section>
