--- a/src/MyCourse/Views/Home/index.cshtml
+++ b/src/MyCourse/Views/Home/index.cshtml
@@ -11,29 +11,7 @@ Scegli da un vasto catalogo sempre a tua disposizione.</p>
     <h2>Aggiunti di recente</h2>
     @foreach (var course in Model.MostRecentCourses)
     {
-        <hr>
-        <div class="row course">
-            <div class="col-md-1">
-                <img src="@course.ImagePath" width="52" height="52">
-            </div>
-            <div class="col-md-5">
-                <h2>@course.Title</h2>
-                    <author>di @course.Author</author>
-            </div>
-            <div class="col-md-2 rating" title="@course.Rating">
-                <rating value="@course.Rating"></rating>
-            </div>
-            <div class="col-md-2 price">
-                @course.CurrentPrice
-                @if (!course.CurrentPrice.Equals(course.FullPrice))
-                {
-                    <br><s>@course.FullPrice</s>
-                }
-            </div>
-            <div class="col-md-2 d-flex align-items-center">
-                <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
-            </div>
-        </div>
+        <partial name="Courses/_CourseLine" model="@course"></partial>
     }
 </section>
 
@@ -42,24 +20,6 @@ Scegli da un vasto catalogo sempre a tua disposizione.</p>
     <h2>I migliori di sempre</h2>
     @foreach (var course in Model.BestRatingCourses)
     {
-        <hr>
-        <div class="row course">
-            <div class="col-md-1">
-                <img src="@course.ImagePath" width="52" height="52">
-            </div>
-            <div class="col-md-5">
-                <h2>@course.Title</h2>
-                    <author>di @course.Author</author>
-            </div>
-            <div class="col-md-2 rating" title="@course.Rating">
-                <rating value="course.Rating"></rating>
-            </div>
-            <div class="col-md-2 price">
-                <price current-price="@course.CurrentPrice" full-price="@course.FullPrice"></price>
-            </div>
-            <div class="col-md-2 d-flex align-items-center">
-                <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
-            </div>
-        </div>
+        <partial name="Courses/_CourseLine" model="@course"></partial>
     }
 </section>
