--- a/src/MyCourse/wwwroot/style.css
+++ b/src/MyCourse/wwwroot/style.css
@@ -1,3 +1,17 @@
+  
+html, body {
+    min-height: 100vh;
+}
+body {
+    display: flex;
+    flex-direction: column;
+}
+body>.container {
+    flex: 1;
+}
+body>footer {
+    background-color: #f5f5f5;
+}
 
 h1 {
     margin-top: 0.7em;
@@ -84,4 +98,25 @@ section+section {
 
 .jumbotron h1 {
     font-size: 3.5rem;
+}
+
+.field-validation-error {
+    color: red;
+}
+
+.validation-summary-errors ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 1em;
+}
+
+.validation-summary-errors li {
+    color: darkred;
+    border-left: 3px solid red;
+    padding-left: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    background-color: rgba(255, 0, 0, 0.05);
+    margin-bottom: 2px;
 }
