--- a/src/MyCourse/wwwroot/style.css
+++ b/src/MyCourse/wwwroot/style.css
@@ -120,3 +120,37 @@ section+section {
     background-color: rgba(255, 0, 0, 0.05);
     margin-bottom: 2px;
 }
+
+.video-container {
+    position: relative;
+    padding-top: 56.25%;
+    display: block;
+}
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+/* Icona per l'input type="file" */
+.custom-file-label::after {
+    content: '\f07c' !important;
+    font-family: 'Font Awesome 5 Free';
+}
+
+.preview-container {
+    padding-top: 100%;
+    position: relative;
+}
+.preview-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top left;
+}
