Autorizzazione(Authorize, AllowAnonymous, reCaptcha, form contatto docente, gestione ruoli, form gestione ruoli, policy)

--- a/src/MyCourse/Pages/Privacy.cshtml
+++ b/src/MyCourse/Pages/Privacy.cshtml
@@ -1,3 +1,4 @@
 @page
 <h1>Privacy</h1>
+<p>Non puoi accedere ai servizi usando tecniche automatizzate come scraping, spider, ecc...</p>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet nulla hic, consequatur sint quis in ea quibusdam sed, rerum officia omnis unde, expedita quae sequi enim ipsum libero eaque a?</p>
