--- a/src/MyCourse/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/MyCourse/Areas/Identity/Pages/Account/Register.cshtml
@@ -32,6 +32,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <recaptcha /><br/>
             <button type="submit" class="btn btn-primary">Registrati</button>
         </form>
     </div>
