--- a/src/MyCourse/Views/Shared/_Layout.cshtml
+++ b/src/MyCourse/Views/Shared/_Layout.cshtml
@@ -1,3 +1,9 @@
+@inject IAuthorizationService authService
+@{ 
+    AuthorizationPolicy policy = new AuthorizationPolicyBuilder().RequireRole(nameof(Role.Administrator)).Build();
+    AuthorizationResult authorizationResult = await authService.AuthorizeAsync(User, policy);
+    bool isAdmin = authorizationResult.Succeeded;
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,6 +35,12 @@
                     <li class="nav-item active">
                         <a class="nav-link" asp-action="Index" asp-controller="Courses">Catalogo corsi</a>
                     </li>
+                    @if (isAdmin)
+                    {
+                        <li class="nav-item active">
+                            <a class="nav-link" asp-page="/Admin/Users">Gestione Utenti</a>
+                        </li>
+                    } 
                 </ul>
                 <partial name="_LoginPartial"></partial>
             </div>
